--- a/src/Componentes/PostModelo/PostModelo.module.css
+++ b/src/Componentes/PostModelo/PostModelo.module.css
@@ -23,7 +23,7 @@
 	padding: 0 7.5rem;
 	font-size: 4rem;
 	display: flex;
-	align-items: center;
+	text-align: center;
 }
 
 .postConteudoContainer {
